--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
+<!-- <html xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net/n2/thymeleaf/layout"
-	  layout:decorate="~{layout/default_layout}">
-
- <!-- <html lang="en" xmlns:th="hhtp://www.thymeleaf.org"> -->
+	  layout:decorate="~{layout/default_layout}"> -->
+<html xmlns:th="http://www.thymeleaf.org">
  	<head>
  		<meta charset="UTF-8">
- 		<title> 타임리프 템플릿 시작</title>
+ 		<title> 타임리프 템플릿 시작 </title>
  	</head>
  	<body>
- 		<p th:text ="${hello}"></p>
+ 		<h2 th:text="${myName}">text</h2>
+ 		<h2>Hello, <span th:text="${myName}"></span></h2>
+ 		<h2>Hola! [[${myName}]]</h2>
  	</body>
 </html>
