Service Stage Error Occurred

--- a/demo/src/main/resources/templates/fragment/commonHeader.html
+++ b/demo/src/main/resources/templates/fragment/commonHeader.html
@@ -1,9 +1,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
-	<th:block th:fragment="configFragment">
+	<th:block th:fragment="commonHead">
+		<meta http-equiv="Content-Type" content="html/text; charset=UTF-8">
+		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scale=no" name="viewport">
+		<meta charset="UTF-8">
+		<mata name="title" th:content="${metaTitle}">
+
+		<title th:text="${metaTitle}"></title>
+		<meta http-equiv="X-UA-Compatible" content="IE=Chrome">
+<!--
 		<meta name = "description" content = "Directing Template">
 		<meta name = "keywords" content = "Directing, unica, creative, html">
 		<meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-
+ -->
+ 
 		<!-- Common CSS -->
 		<link rel = "stylesheet" href ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 		<link rel = "stylesheet" href ="/smilegate-test/src/main/css" type="text/css"/>
@@ -12,12 +21,14 @@
 		<script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+<!-- 
 		<script src = "/smilegate-test/src/main"></script>
+ -->
 
-		<!-- default_Layout을 사용하는 페이지에서 단독으로 넣을 css공간 -->
+		<!-- defaultLayout을 사용하는 페이지에서 단독으로 넣을 css공간 -->
 		<th:block layout:fragment="css"></th:block>
 
-		<!-- default_Layout을 사용하는 페이지에서 단독으로 넣을 script공간 -->
+		<!-- defaultLayout을 사용하는 페이지에서 단독으로 넣을 script공간 -->
 		<th:block layout:fragment="script"></th:block>
 	</th:block>
 
