--- a/demo/src/main/resources/templates/hello.html
+++ b/demo/src/main/resources/templates/hello.html
@@ -6,15 +6,14 @@
  		<meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
  		<title> 타임리프 템플릿 시작 </title>
  	</head>
+
+
+
  	<body>
+	 	<h1 th:text="${name}">Name</h1>
+	 	<h2 th:text="${hello}">comment</h2>
 
- 	<h1 th:text="${name}">Name</h1>
- 	<h2 th:text="${hello}">comment</h2>
-<!--  		<p th:test="${hello}"></p>
+		<input type="text" readonly="readonly" th:text='${cmnt}'>
 
- 		<h2 th:text="${myName}">text</h2>
- 		<h2>Hello, <span th:text="${myName}">myName</span></h2>
- 		<h2>Hola! [[${myName}]]</h2>
--->
  	</body>
 </html>
